[package]
name = "moddef"
version = "0.2.4"
edition = "2021"
license = "MIT"
description = "Macros for convenient nested module structure declaration"
repository = "https://github.com/sigurd4/moddef"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
